--- a/assets/sass/theme.scss
+++ b/assets/sass/theme.scss
@@ -7,4 +7,8 @@
 
 @import 'files/nav';
 @import 'files/nav-mobile';
-@import 'files/footer'
+@import 'files/footer';
+
+@import 'files/homepage';
+@import 'files/product';
+@import 'files/inner';
