--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 /*
-Theme Name: PFS
-Author:     Eagle Eye Media
-Author URI: https://www.eugeneseo.com/
-Template:   Divi
-Version:    1.0
+Theme Name:   PFS
+Theme URI:   https://stierdev.com/
+Author:      Eagle Eye Media
+Author URI:  https://www.eugeneseo.com/
+Version:     1.0.0
 Description: PFS Theme based on S Tier Framework
+Text Domain: stier
 WordPress Version: 6.3.1
 */
