--- a/assets/sass/files/nav-mobile.scss
+++ b/assets/sass/files/nav-mobile.scss
@@ -15,6 +15,7 @@ label[for="nav-toggle"] {
         height: 70px;
 		width: 100%;
 		box-sizing: border-box;
+		z-index: 99;
 		.container {
 			display: flex;
 			justify-content: space-between;
@@ -54,7 +55,7 @@ label[for="nav-toggle"] {
 					padding: 1.5rem;
 					color: var(--color-text);
 					opacity: .75;
-					font-size: 23px;
+					font-size: 16px;
 					width: 100%;
 				}
 				&.current-menu-item {
@@ -66,11 +67,27 @@ label[for="nav-toggle"] {
 					> a {
 						width: calc(100% - 55px);
 					}
+					.menu-item-has-children {
+						.sub-menu-trigger svg {
+							transition: var(--st);
+						}
+						&.sub-menu-open {
+							.sub-menu-trigger svg {
+								transform: rotate(90deg);
+								top: 5px;
+								position: relative;
+							}
+						}
+					}
 				}
 				.sub-menu-trigger {
 					width: 25px;
-					transform: rotate(45deg);
 					transition: var(--st);
+					svg {
+						height: 20px;
+						position: relative;
+						top: 3px;
+					}
 				}
 				> .sub-menu {
 					width: 100%;
@@ -86,9 +103,8 @@ label[for="nav-toggle"] {
 						object-position: top;
 					}
 					a {
-					  padding: 1rem 2rem 0 40px;
-					  font-size: 20px;
-					  color: var(--color-1);
+					  padding: 1rem 2rem 0 20px;
+					  font-size: 14px;
 					  font-weight: 600;
 					  div {
 						font-size: 16px;
