--- a/assets/sass/files/nav.scss
+++ b/assets/sass/files/nav.scss
@@ -1,33 +1,7 @@
 .sub-menu {
 	@include clean-list;
 }
-.sub-menu-trigger {
-	svg {
-		stroke: var(--color-1);
-	}
-}
-.top_bar {
-	background-color: var(--color-1);
-	color: #000;
-	text-align: center;
-	padding-block: 8px;
-	.top_bar_inner {
-		display: flex;
-		justify-content: center;
-		align-items: center;
-	}
-	p {
-		margin: 0;
-		font-size: 18px;
-		@include mob-only {
-			font-size: 14px;
-		}
-	}
-	a {
-		@include btn-2;
-		margin-left: 16px;
-	}
-}
+
 @include desk-min {
 	.hamburger {
 		display: none;
@@ -38,6 +12,7 @@
 	.header-main {
 		z-index: 9;
 		position: relative;
+		box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25);
 		.container {
 			@include flex;
 			justify-content: space-between;
@@ -70,10 +45,11 @@
 					display: flex;
 					flex-direction: column;
 					background-color: #fff;
-					padding: 2rem;
+					padding: 10px 0;
 					opacity: 0;
 					transition: opacity .3s;
-					filter: drop-shadow(2.5px 2.5px 5px rgba(0, 0, 0, 0.05));
+					filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+					padding-bottom: 1.5rem;
 					li:not(:last-child) {
 					a {
 						margin-bottom: .5rem;
@@ -87,46 +63,107 @@
 				align-items: center;
 				position: relative;
 				padding-block: 20px;
-				&:not(:last-child) {
-					margin-right: 6rem;
+				&:not(.nav-btn)> a {
+					position: relative;
+					&:before {
+						content: "";
+						position: absolute;
+						height: 2px;
+						width: 100%;
+						background-color: var(--color-1);
+						bottom: -6px;
+						opacity: 0;
+						transition: var(--st);
+					}
+					&:hover {
+						&::before {
+							opacity: 1;
+						}
+					}
 				}
-				&.account {
-					order: 1;
+				&:not(:last-child) {
+					margin-right: 4rem;
+				}
+				&.current-menu-item {
+					> a {
+						font-weight: 700;
+					}
 				}
 				&.menu-item-has-children {
-					margin-right: 4.9rem;
 					a {
 						padding-right: 5px;
 						font-size: 14px;
+						width: 100%;
+						display: inline-flex;
+						transition: .1s all;
+					}
+					li {
+						display: flex;
+						&:not(:last-child) {
+							margin-bottom: 8px;
+						}
+						.sub-menu {
+							position: absolute;
+							right: auto;
+							top: 0;
+							left: -999999px;
+						}
+						a {
+							font-size: 12px;
+							padding-inline: 14px;
+						}
+						.sub-menu-trigger {
+							transform: rotate(0);
+							height: 15px;
+							top: -5px;
+							right: 5px
+						}
+						&:hover {
+							> a {
+								font-weight: 600;
+								font-style: italic;
+							}
+							.sub-menu {
+								left: 200px;
+							}
+							.sub-menu-trigger {
+								transform: scaleX(-1);
+							}
+						}
 					}
 				}
 				> a {
-					font-size: 16px;
+					font-size: 14px;
 				}
 				a {
 					color: var(--t-color);
 				}
 				.sub-menu-trigger {
-					top: 4px;
 					position: relative;
 					right: 0;
-					transform: rotate(45deg);
+					transform: rotate(90deg);
 					cursor: pointer;
 					transition: var(--st);
 					svg {
-					stroke: var(--color-1);
+					stroke: #000;
+					width: 16px;
 					}
 				}
 			}
 			> li:hover {
 				.sub-menu-trigger{
-					transform: rotate(90deg);
-					top: 1px;
-					right: 4px;
+					transform: rotate(270deg);
 				}
 				.sub-menu {
 					opacity: 1;
 					left: -2rem;
+				}
+			}
+			.nav-btn {
+				a {
+					padding: 7px 13.5px;
+					border: 1px solid #000;
+
 				}
 			}
 		}
