--- a/assets/sass/files/homepage.scss
+++ b/assets/sass/files/homepage.scss
@@ -49,18 +49,20 @@
 		}
 		.video-control {
 			position: absolute;
-			bottom: 16px;
-			left: 17px;
-			width: 35px;
-			height: 35px;
+			width: 100%;
+			height: 100%;
 			background-color: transparent;
 			border: none;
 			line-height: 0;
 			padding: 0;
 			outline: none;
+			cursor: pointer;
 			span {
-				width: 100%;
-				height: 100%;
+				position: absolute;
+				width: 35px;
+				height: 35px;
+				bottom: 16px;
+				left: 17px;
 				display: flex;
 				background-size: contain;
 				background-repeat: no-repeat;
