--- a/assets/sass/files/inner.scss
+++ b/assets/sass/files/inner.scss
@@ -1,5 +1,6 @@
 .about_hero {
 	background-color: var(--color-1);
+	border-bottom: 2px solid #000;
 	.container {
 		border-left: 2px solid #000;
 		border-right: 2px solid #000;
