--- a/assets/sass/files/nav.scss
+++ b/assets/sass/files/nav.scss
@@ -13,6 +13,9 @@
 		z-index: 9;
 		position: relative;
 		box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25);
+		position: sticky;
+		top: 0;
+		background-color: #fff;
 		.container {
 			@include flex;
 			justify-content: space-between;
