--- a/assets/sass/files/inner.scss
+++ b/assets/sass/files/inner.scss
@@ -127,6 +127,9 @@
 		@include mob-only {
 			padding-inline: var(--space-4)
 		}
+		@include tab-max {
+			width: 100%;
+		}
 	}
 	.left {
 		@include limbo-min {
@@ -160,22 +163,105 @@
 		}
 		select {
 			padding-block: 0;
-			width: 115px!important;
 			-webkit-appearance: none;
 			background-image: url(../../assets/icons/arrow-down.svg);
 			background-repeat: no-repeat;
 			background-position: center right 14px;
-
+			&:active, &:focus {
+				outline: none!important;
+			}
 		}
-		.wpforms-field:not(.wpforms-field-textarea) {
+		.sp_checkboxes {
+			display: flex;
+			align-items: center;
+
+			@include tab-min {
+				width: calc(100% - 155px)!important;
+				margin-left: 155px;
+				justify-content: flex-end;
+				margin-top: 15px;
+				li {
+					justify-content: flex-end;
+				}
+				input {
+					margin-right: 8px;
+				}
+			}
+			li {
+				display: flex;
+				align-items: center;
+				font-size: 14px;
+			}
+			input {
+				width: auto!important;
+				opacity: 0;
+				width: 0!important;
+				height: 0;
+			}
+			label {
+				cursor: pointer;
+				background-image: url(../icons/square.svg);
+				background-repeat: no-repeat;
+				background-size: 14px;
+				padding-left: 20px;
+				background-position: top .5px left;
+			}
+			input:checked + label {
+				background-image: url(../icons/check-square.svg);
+			}
+			fieldset {
+				padding: 0;
+				border: 0;
+				width: 100%;
+			}
+		}
+
+		.wpforms-field:not(.wpforms-field-textarea):not(.wpforms-field-select-style-modern) {
 			width: 48%;
 			input, select {
 				width: 100%;
 			}
+			margin-bottom: 20px;
 			@include mob-only {
 				width: 100%;
+				margin-bottom: 10px;
 			}
-			margin-bottom: 20px;
+
+		}
+		.wpforms-field-select-style-modern {
+			width: 100%;
+			margin-bottom: 3rem;
+			@include flex-col;
+			justify-content: center;
+			align-items: center;
+			.choices__list.choices__list--dropdown {
+				@include mob-only {
+					min-width: unset;
+				}
+			}
+			.choices {
+				max-width: 100%;
+				@include tab-min {
+					width: 65%;
+					min-width: fit-content;
+				}
+				.choices__placeholder {
+					color: var(--color-1)!important;
+					opacity: 1;
+					font-weight: 600;
+				}
+				.choices__inner {
+					border-radius: 0!important;
+					background-color: #000;
+					color: var(--color-1);
+					.choices__item {
+						font-size: 16px;
+						&[aria-selected="true"] {
+							color: #fff;
+						}
+					}
+				}
+			}
 		}
 		.form_subject {
 			width: 100%!important;
@@ -193,6 +279,19 @@
 			margin-bottom: 8px;
 			line-height: 18px;
 			display: block;
+			@include mob-only {
+				font-size: 14px;
+				margin-bottom: 4px;
+			}
+			&.wpforms-label-hide {
+				display: none;
+			}
+		}
+	}
+	.wpforms-submit-container {
+		@include tab-min {
+			width: 155px;
+			margin-top: -65px;
 		}
 	}
 	.wpforms-submit {
