--- a/assets/sass/files/nav.scss
+++ b/assets/sass/files/nav.scss
@@ -35,7 +35,8 @@
 	}
 	.main-navigation {
 		#primary-menu {
-			@include flex;
+			display: flex!important;
+			flex-wrap: wrap;
 			ul {
 				&.sub-menu {
 					float: left;
