--- a/assets/sass/files/product.scss
+++ b/assets/sass/files/product.scss
@@ -410,10 +410,11 @@
 	.ps4_boxes {
 		@include flex-between;
 		counter-reset: section;
+		max-width: 514px;
 		.ps4_box {
-			margin-bottom: 3rem;
+			margin-bottom: 45px;
 			@include tab-min {
-				width: 30%;
+				width: 40%;
 				img {
 					object-fit: contain;
 					aspect-ratio: 198 / 159;
@@ -446,56 +447,84 @@
 		}
 	}
 	.right {
+		h2 {
+			max-width: 514px;
+			width: 100%;
+		}
+
 		@include limbo-min {
-			padding-left: var(--space-1)
+			padding-left: var(--space-1);
+			@include flex-col;
+			align-items: flex-end;
 		}
 		@include tab-max {
 			padding-top: 0;
 		}
 	}
-	h3 {
-		margin-bottom: 15px;
-		font-weight: 600
-	}
-	.instructions {
-		@include flex;
-		align-items: center;
-		margin-bottom: var(--space-2);
-		.col {
-			img {
-				width: auto;
-				height: auto;
-			}
-			p {
-				font-size: 14px;
-				line-height: 18px;
-				display: flex;
-				&:first-child {
-					margin-bottom: 6px;
-				}
-				&:not(:first-child) {
-					margin-top: 0;
-				}
-				span {
-					margin-right: 6px;
-					min-width: 10px;
-				}
-			}
-		}
-		@include tab-min {
-			&:first-of-type {
-				figure {
-					height: 96.5px;
-					display: flex;
-					align-items: center;
-				}
-			}
-			.col {
-				width: 40%;
-			}
-		}
-	}
+}
 
+.product_sec_4b {
+	border-top: 2px solid #000;
+	.container {
+		@include flex;
+		h2 {
+			width: 100%;
+			margin-bottom: 30px;
+		}
+		h3 {
+			margin-bottom: 25px;
+		}
+		img {
+			width: auto;
+			height: 100%;
+		}
+		> .col {
+			&:first-of-type {
+				width: 45%;
+				@include limbo-max {
+					width: 66%;
+				}
+				@include mob-only {
+					width: 100%;
+				}
+				.instructions {
+					@include flex;
+					> .col {
+						&:first-child {
+							margin-right: var(--space-1);
+						}
+						figure {
+							height: 9rem;
+							margin-bottom: 3rem;
+						}
+					}
+				}
+			}
+			&:nth-of-type(2) {
+				width: 30%;
+				@include limbo-max {
+					width: 34%;
+				}
+				@include mob-only {
+					width: 100%;
+				}
+				figure {
+					height: 11rem;
+					margin-bottom: 1rem;
+				}
+				div {
+					max-width: 286px;
+				}
+			}
+			&:nth-last-of-type(1) {
+				width: 25%;
+				@include limbo-max {
+					width: 100%;
+				}
+				padding-top: var(--space-1);
+			}
+		}
+	}
 }
 
 .product_sec_5 { // Patient Instruction
@@ -631,10 +660,13 @@
 		}
 		@include tab-min {
 			.left {
-				width: 170px;
+				width: 205px;
+				img {
+					width: auto;
+				}
 			}
 			.right {
-				width: calc(100% - 170px);
+				width: calc(100% - 205px);
 			}
 		}
 		&:not(:last-child) {
