--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 /*
-Theme Name:   PFS
+Theme Name:  Seattle Splint
 Theme URI:   https://stierdev.com/
 Author:      Eagle Eye Media
 Author URI:  https://www.eugeneseo.com/
-Version:     1.0.0
-Description: PFS Theme based on S Tier Framework
+Version:     1.1.0
+Description: Seattle Splint Theme based on S Tier Framework
 Text Domain: stier
-WordPress Version: 6.3.1
+WordPress Version: 6.4.1
 */
