--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 /*
 Theme Name:  Seattle Splint
-Theme URI:   https://stierdev.com/
-Author:      Eagle Eye Media
-Author URI:  https://www.eugeneseo.com/
-Version:     1.1.0
+Theme URI:   https://www.seattlesplint.com/
+Author:      S-Tier Dev
+Author URI:  https://stierdev.com/
+Version:     1.2.2
 Description: Seattle Splint Theme based on S Tier Framework
 Text Domain: stier
-WordPress Version: 6.4.1
+WordPress Version: 6.7
 */
