--- a/assets/sass/files/product.scss
+++ b/assets/sass/files/product.scss
@@ -1,229 +1,192 @@
-.product_hero {
-	background-color: var(--color-1);
+.practitioner_hero {
+	h2.title-3 {
+		margin-bottom: 3.3rem;
+	}
 }
-.product_hero_inner {
-	display: grid;
-	@include tab-max {
-		grid-template-columns: 100%;
-	}
-	@include limbo-min {
-		grid-template-columns: repeat(100, 1%);
-		grid-template-rows: repeat(12, 7vh);
-	}
-	.hover_box {
-		padding: var(--space-3);
-		z-index: 4;
-		position: relative;
-		display: flex;
-		align-items: flex-end;
-		flex-direction: column;
-		justify-content: center;
-		text-align: right;
-		width: fit-content;
-		@include mob-only {
-			padding-inline: 20px;
-		}
-		&:hover {
-			+ .ib_image {
-				opacity: 1;
-			}
-			.box_title {
-				border-color: #000;
-				font-weight: 700;
-			}
-		}
-		.box_title {
-			margin-bottom: 16px;
-			display: block;
-			font-size: 20px;
-			border-bottom: 4px dashed transparent;
-			width: fit-content;
-			transition: var(--st);
-			font-weight: 500;
-		}
-		p {
-			@include flex-col;
-			margin: 0;
-		}
-		@include tab-max {
-			padding-bottom: 0;
-			align-items: flex-start;
-			padding-top: 8px;
-			.box_title {
-				margin-bottom: 0;
-				text-align: left;
 
-			}
-			p {
-				font-size: 0;
-				transition: var(--st);
-				padding-bottom: 0;
-				text-align: left;
+.practitioner_hero_inner {
+	display: flex;
+	@include desk-min {
+		> div {
+			width: 50%;
+		}
+	}
+	@include limbo-max {
+		flex-direction: column;
+	}
+}
+.ph_left {
+	background-color: var(--color-1);
+	padding-inline: var(--space-3);
+	h1 {
+		max-width: 712px;
+		margin-inline: auto;
+	}
+	.ph_image_grid	{
+		display: grid;
+		height: 100%;
+		max-width: 712px;
+		margin-inline: auto;
+		@include tab-max {
+			grid-template-columns: 100%;
+		}
+		@include limbo-min {
+			grid-template-columns: repeat(100, 1%);
+			grid-template-rows: repeat(100, 1%);
+		}
+		.hover_box {
+			z-index: 4;
+			position: relative;
+			display: flex;
+			align-items: flex-end;
+			flex-direction: column;
+			justify-content: flex-start;
+			text-align: right;
+			width: fit-content;
+			@include mob-only {
+				padding-inline: 20px;
 			}
 			&:hover {
+				+ .ib_image {
+					opacity: 1;
+				}
+				.box_title {
+					border-color: #000;
+					font-weight: 700;
+				}
+			}
+			.box_title {
+				margin-bottom: 4px;
+				display: block;
+				font-size: 16px;
+				border-bottom: 4px dashed transparent;
+				width: fit-content;
+				transition: var(--st);
+				font-weight: 500;
+			}
+			p {
+				@include flex-col;
+				margin: 0;
+				font-size: 14px;
+			}
+			@include tab-max {
+				padding-bottom: 0;
+				align-items: flex-start;
+				padding-top: 8px;
+				.box_title {
+					margin-bottom: 0;
+					text-align: left;
+
+				}
 				p {
-					font-size: 16px;
-					padding-top: 8px;
+					font-size: 0;
+					transition: var(--st);
+					padding-bottom: 0;
+					text-align: left;
+				}
+				&:hover {
+					p {
+						font-size: 16px;
+						padding-top: 8px;
+					}
+				}
+			}
+			&:nth-of-type(1) {
+				grid-column: 1 / 39;
+				grid-row: 13 / 38;
+				text-align: right;
+				@include tab-max {
+					grid-column: 1 / 2;
+					grid-row: 2 / 3;
+				}
+			}
+			&:nth-of-type(2) {
+				grid-column: 8 / 40;
+				grid-row: 45 / 65;
+				@include tab-max {
+					grid-column: 1 / 2;
+					grid-row: 3 / 4;
+				}
+			}
+			&:nth-of-type(3) {
+				grid-column: 5 / 36;
+				grid-row: 73 / 101;
+				@include tab-max {
+					grid-column: 1 / 2;
+					grid-row: 4 / 5;
+				}
+			}
+			&:nth-of-type(4) {
+				grid-column: 68 / 101;
+				grid-row: 15 / 45;
+				text-align: left;
+				align-items: flex-start;
+				@include tab-max {
+					grid-column: 1 / 2;
+					grid-row: 5 / 6;
+				}
+			}
+			&:nth-of-type(5) {
+				grid-column: 68 / 101;
+				grid-row: 45 / 80;
+				text-align: left;
+				align-items: flex-start;
+				@include tab-max {
+					grid-column: 1 / 2;
+					grid-row: 6 / 7;
 				}
 			}
 		}
-		&:nth-of-type(1) {
-			grid-column: 10 / 37;
-			grid-row: 2 / 4;
-			text-align: right;
-			@include limbo-only {
-				grid-column: 1 / 37;
+		.ib_image {
+			opacity: 0;
+			z-index: 3;
+			transition: var(--st);
+		}
+		.main_image {
+			z-index: 2;
+		}
+		.ib_image, .main_image {
+			object-fit: contain;
+			@include limbo-min {
+				grid-column: 36 / 82;
+				grid-row: 1 / 101;
 			}
 			@include tab-max {
 				grid-column: 1 / 2;
-				grid-row: 2 / 3;
+				grid-row: 1 / 2;
+				padding-left: 16px;
 			}
-		}
-		&:nth-of-type(2) {
-			grid-column: 12 / 40;
-			grid-row: 5 / 7;
-			@include limbo-only {
-				grid-column: 1 / 40;
-			}
-			@include tab-max {
-				grid-column: 1 / 2;
-				grid-row: 3 / 4;
-			}
-		}
-		&:nth-of-type(3) {
-			grid-column: 12 / 36;
-			grid-row: 9 / 11;
-			@include limbo-only {
-				grid-column: 1 / 36;
-			}
-			@include tab-max {
-				grid-column: 1 / 2;
-				grid-row: 4 / 5;
-			}
-		}
-		&:nth-of-type(4) {
-			grid-column: 63 / 94;
-			grid-row: 2 / 4;
-			text-align: left;
-			align-items: flex-start;
-			@include limbo-only {
-				grid-column: 63 / 101;
-			}
-			@include tab-max {
-				grid-column: 1 / 2;
-				grid-row: 5 / 6;
-			}
-		}
-		&:nth-of-type(5) {
-			grid-column: 61 / 92;
-			grid-row: 5 / 7;
-			text-align: left;
-			align-items: flex-start;
-			@include tab-only {
-				grid-column: 61 / 101;
-			}
-			@include tab-max {
-				grid-column: 1 / 2;
-				grid-row: 6 / 7;
-			}
-		}
-	}
-	.ib_image {
-		opacity: 0;
-		z-index: 3;
-		transition: var(--st);
-	}
-	.main_image {
-		z-index: 2;
-	}
-	.ib_image, .main_image {
-		object-fit: contain;
-		@include limbo-min {
-			grid-column: 31 / 76;
-			grid-row: 1 / 12;
-			margin-left: 4.5vh;
-		}
-		@include tab-max {
-			grid-column: 1 / 2;
-			grid-row: 1 / 2;
-			padding-left: 16px;
 		}
 	}
 }
 
-.product_sec_1 {
-	border-top: 2px solid #000;
+.ph_right {
+	padding-inline: var(--space-1);
+	ul {
+		margin-bottom: 10px;
+	}
+	h4 {
+		margin-bottom: 10px;
+	}
+	li {
+		margin-bottom: 3.5px;
+		&:before {
+			content: "•";
+			margin-inline: 10px;
+		}
+	}
+}
+
+.ph_right_inner {
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	@include tab-max {
+		grid-template-columns: 1fr;
+	}
 }
 
 @mixin lg-width {
 	max-width: calc(840px + var(--space-1) + 5vw);
-}
-
-.product_sec_1_inner {
-	@include flex;
-	@include tab-max {
-		flex-direction: column;
-	}
-	.left {
-		border-right: 2px solid #000;
-		@include limbo-min {
-			width: 37.5%;
-			img {
-				object-fit: cover;
-			}
-		}
-	}
-	.right {
-		@include limbo-min {
-			@include lg-width;
-			width: 62.5%;
-		}
-		@include desk-min {
-			padding-left: var(--space-1);
-			padding-right: 5vw;
-		}
-		@include limbo-only {
-			padding-inline: var(--space-3);
-		}
-		@include tab-max {
-			padding-inline: var(--space-2);
-		}
-
-		h3 {
-			width: 100%;
-			margin-bottom: 20px;
-		}
-		h4 {
-			font-weight: 600;
-			margin-bottom: 8px;
-		}
-		@include flex-between;
-		> div {
-			width: 24%;
-			ul {
-				list-style: disc;
-				padding-left: 20px;
-				margin-bottom: 8px;
-				li {
-					font-size: 14px;
-					line-height: 18px;
-				}
-			}
-			@include tab-only {
-				width: 48%;
-			}
-			@include mob-only {
-				width: 100%;
-			}
-		}
-	}
-	.col {
-		@include tab-min {
-			&:nth-of-type(3), &:nth-of-type(4) {
-				margin-top: 20px;
-			}
-		}
-	}
 }
 
 .product_sec_2 {
@@ -238,32 +201,13 @@
 	.sec_2_intro {
 		@include flex-between;
 		margin-bottom: calc(44px - 1em);
-		@include desk-min {
-			.left {
-				width: calc(100% - 230px);
-				padding-right: var(--space-1);
-			}
-			.right {
-				width: 230px;
-			}
-		}
-
+		max-width: 480px;
 	}
 	.ps2_inner_left {
-		padding-right: var(--space-2);
 		@include limbo-min {
-			width: 62.5%;
-			border-right: 2px solid #000;
-		}
-		@include tab-max {
-			padding-inline: var(--space-2);
+			width: 49%;
 		}
 		.ps2_left_inner {
-			@include limbo-min {
-				@include lg-width;
-				margin-left: auto;
-				padding-left: 5vw;
-			}
 			li {
 				font-size: 14px;
 				line-height: 18px;
@@ -291,18 +235,23 @@
 					background-color: #FBF5E4;
 				}
 			}
+			.height {
+				width: 20%;
+			}
+			.shoe_size {
+				width: 20%;
+			}
 			.size {
-				width: 30%;
+				width: 20%;
+			}
+			.item {
+				width: 20%;
 			}
 			.calf {
 				width: 20%;
 			}
-			.height {
-				width: 25%;
-			}
-			.shoe_size {
-				width: 25%;
-			}
+
+
 			@include mob-only {
 				.size {
 					width: 35%;
@@ -318,20 +267,27 @@
 				}
 			}
 		}
+		.table_disclaimer {
+			padding-left: 16px;
+			position: relative;
+			margin-top: 27px;
+			font-size: 14px;
+			&::before {
+				content: "*";
+				left: 0;
+				position: absolute;
+			}
+		}
 	}
 	.ps2_inner_right {
 		@include limbo-min {
-			width: 37.5%;
-			padding-left: var(--space-2);
-			padding-right: 5vw;
+			width: 47%;
 		}
 		@include tab-max {
-			padding-inline: var(--space-2);
 			padding-top: 0;
 		}
 		img {
 			object-fit: contain;
-			max-width: 576px;
 		}
 	}
 }
@@ -341,11 +297,19 @@
 	h2 {
 		margin-bottom: var(--space-2);
 	}
-	@include limbo-min {
-		.sec3_intro {
-			max-width: 67.5%;
+	.sec3_intro {
+		@include flex-between;
+		align-items: flex-start;
+		.sec3_intro_text {
+			@include limbo-min {
+				width: 67.5%;
+			}
+		}
+		.btn-2 {
+			margin-top: 16px
 		}
 	}
+
 	.sec3_info_boxes {
 		@include flex-between;
 		margin-top: var(--space-2);
@@ -387,31 +351,17 @@
 
 .product_sec_4 { // Placement
 	border-top: 2px solid #000;
-	.container {
-		@include flex;
-		@include tab-max {
-			flex-direction: column;
-		}
-		@include limbo-min {
-			> div {
-				width: 50%;
-			}
-		}
-	}
 	h2 {
 		margin-bottom: 30px
 	}
-	.left {
-		@include limbo-min {
-			border-right: 2px solid #000;
-			padding-right: 8.4rem;
-		}
-	}
 	.ps4_boxes {
 		display: grid;
-		grid-template-columns: repeat(2, 1fr);
+		grid-template-columns: repeat(3, 1fr);
 		counter-reset: section;
 		gap: 4rem 7rem;
+		@include limbo-max {
+			grid-template-columns: repeat(2, 1fr);
+		}
 		@include mob-only {
 			grid-template-columns: 1fr;
 		}
@@ -467,66 +417,42 @@
 }
 
 .product_sec_4b {
-	border-top: 2px solid #000;
-	.container {
-		@include flex;
+	.product_sec_4b_inner {
 		h2 {
 			width: 100%;
 			margin-bottom: 30px;
 		}
-		h3 {
-			margin-bottom: 25px;
-		}
-		img {
-			width: auto;
-			height: 100%;
-		}
-		> .col {
-			&:first-of-type {
-				width: 45%;
-				@include limbo-max {
-					width: 66%;
+		.instructions {
+			display: grid;
+			grid-template-columns: repeat(4, 1fr);
+			gap: 8rem;
+			@include limbo-max {
+				grid-template-columns: repeat(2, 1fr);
+			}
+			@include mob-only {
+				grid-template-columns: 1fr;
+			}
+			figure {
+				@include limbo-min {
+					height: 235px;
 				}
-				@include mob-only {
-					width: 100%;
-				}
-				.instructions {
-					@include flex;
-					> .col {
-						&:first-child {
-							margin-right: var(--space-1);
-						}
-						figure {
-							height: 9rem;
-							margin-bottom: 3rem;
-						}
-					}
+				display: flex;
+				align-items: center;
+				img {
+					max-width: 28rem;
+					object-fit: contain;
+					width: auto;
+					height: auto;
+					object-position: center;
 				}
 			}
-			&:nth-of-type(2) {
-				width: 30%;
-				@include limbo-max {
-					width: 34%;
-				}
-				@include mob-only {
-					width: 100%;
-				}
-				figure {
-					height: 11rem;
-					margin-bottom: 1rem;
-				}
-				div {
-					max-width: 286px;
-				}
-			}
-			&:nth-last-of-type(1) {
-				width: 25%;
-				@include limbo-max {
-					width: 100%;
-				}
-				padding-top: var(--space-1);
+			p {
+				font-size: 14px;
 			}
 		}
+	}
+	.btn-1 {
+		margin-top: var(--space-2);
 	}
 }
 
@@ -539,8 +465,8 @@
 			flex-direction: column;
 		}
 		h2 {
-			width: 100%;
 			margin-bottom: 20px;
+			width: 100%;
 		}
 		@include limbo-min {
 			div {
@@ -557,123 +483,163 @@
 
 }
 
-.product_sec_6 { // Optional Components
+.product_sec_6 { // Videos
 	border-top: 2px solid #000;
-	.ps6_top {
-		border: 2px solid #000;
-		border-top: none;
-		padding: var(--space-1) 13rem;
-		@include mob-only {
-			padding: var(--space-2)
-		}
+	h2 {
+		margin-bottom: 20px;
 	}
-	.ps6_bottom {
-		@include flex;
-		@include tab-max {
-			flex-direction: column;
-		}
-		border-left: 2px solid #000;
-		@include limbo-min {
-			border-right: 2px solid #000;
-			padding-left: var(--space-1);
-			> div {
-				width: 50%;
+	.product_videos_grid {
+		@include flex-between;
+		.product_video {
+			@include limbo-min {
+				width: 48%;
 			}
-		}
-	}
-	img {
-		height: auto;
-	}
-	.ps6_text {
-		font-size: 14px;
-	}
-	.ps6_left {
-		@include flex;
-		border-right: 2px solid #000;
-		padding-block: var(--space-1);
-		@include tab-max {
-			border-bottom: 2px solid #000;
-			padding-inline: var(--space-2);
-		}
-
-		.right {
-			img {
-				max-width: 288px;
-
+			figure {
+				aspect-ratio: 16 / 9;
+				position: relative;
 			}
-			.caption {
-				font-style: italic;
-				font-size: 14px;
-				display: block;
-				margin-top: 4px;
+			.play-overlay {
+				position: absolute;
+				width: 100%;
+				height: 100%;
+				top: 0;
+				left: 0%;
+				@include flex-center;
 			}
-			h4 {
-				margin-bottom: 8px;
-				margin-top: 20px;
+			.video_meta {
+				@include flex-between;
 			}
-			ul {
-				list-style: none;
-				padding-left: 20px;
-				li {
-					font-size: 14px;
-					line-height: 18px;
-					font-weight: 400;
-					position: relative;
-					&::before {
-						content: "";
-						width: 3.5px;
-						height: 3.5px;
-						background-color: #000;
-						border-radius: 10px;
-						position: absolute;
-						left: -15px;
-						top: 9px;
+			@include tab-min {
+				.video_description {
+					width: calc(100% - 155px);
+					p {
+						margin-top: 11px;
+					}
+				}
+				.video_run_time {
+					width: 120px;
+					flex-shrink: 0;
+					p {
+						margin-top: 11px;
 					}
 				}
 			}
-		}
-		@include tab-min {
-			.left {
-				width: 111px;
-			}
-			.right {
-				width: calc(100% - 111px);
-				padding-left: var(--space-3);
-				padding-right: var(--space-2);
+			@include mob-only {
+				.video_description {
+					p {
+						margin-bottom: 0;
+					}
+				}
+				.video_run_time {
+					margin-bottom: 32px;
+				}
 			}
 		}
 	}
+}
 
-	.ps6_right_row {
-		padding: var(--space-2);
-
-		@include flex;
-		@include limbo-only {
-			flex-direction: column;
+.product_sec_7 { // Optional Components
+	border-top: 2px solid #000;
+	h2 {
+		margin-bottom: var(--space-2);
+	}
+	p {
+		font-size: 14px;
+	}
+	.ps7_top {
+		@include flex-between;
+		@include limbo-min {
 			> div {
-				width: 100%!important;
-				img {
-					width: auto;
-				}
+				width: 48%;
 			}
 		}
-		width: 100%;
-		@include tab-max {
-			border-right: 2px solid #000;
-		}
-		@include tab-min {
+		.ps7_top_left {
+			@include flex-between;
+			@include mob-only {
+				flex-direction: column;
+			}
+			@include tab-max {
+				margin-bottom: var(--space-3);
+			}
 			.left {
-				width: 205px;
-				img {
+				@include tab-min {
+					width: 160px;
+				}
+				.sec6_img_1 {
 					width: auto;
+					height: auto;
+					@include tab-min {
+						max-width: calc(100% - 3rem);
+					}
 				}
 			}
 			.right {
-				width: calc(100% - 205px);
+				@include tab-min {
+					width: calc(100% - 190px);
+				}
 			}
 		}
-		&:not(:last-child) {
-			border-bottom: 2px solid #000;
+		.ps7_top_right {
+			@include flex-between;
+			@include mob-only {
+				flex-direction: column;
+			}
+			> div {
+				@include tab-min {
+					width: 48%;
+				}
+				img {
+					object-fit: contain;
+					height: auto
+				}
+				.caption {
+					font-size: 14px
+				}
+			}
+		}
+	}
+	.ps7_bottom {
+		@include flex-between;
+		margin-top: var(--space-1);
+		@include limbo-min {
+			> div {
+				width: 48%;
+			}
+		}
+		.ps7_right_row {
+			@include flex-between;
+			margin-bottom: var(--space-2);
+			@include tab-min {
+				&:nth-child(odd) {
+					.left {
+						width: 160px;
+					}
+					.right {
+						width: calc(100% - 190px);
+					}
+				}
+				&:nth-child(even) {
+					flex-direction: row-reverse;
+					.left {
+						width: 256px;
+					}
+					.right {
+						width: calc(100% - 276px);
+					}
+				}
+			}
+
+
+			.left {
+				.image {
+					width: auto;
+					height: auto;
+					@include tab-min {
+						max-width: calc(100% - 3rem);
+					}
+				}
+			}
+
 		}
 	}
 }
